<resources>
    <string name="app_name">PrinterApp</string>
    <string name="orders_item">Заказы</string>
    <string name="analytics_item">Анализ</string>
    <string name="create">Добавить</string>
    <string name="create_header">Давайте добавим заказ!</string>
    <string name="edit_header">Редактирование заказа</string>
    <string name="save">Сохранить</string>
    <string name="delete_confirmation">Вы действительно хотите отменить заказ?</string>
    <string name="finish_confirmation">Вы действительно хотите завершить заказ?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="empty_fields">Заполните все поля!</string>
    <string name="not_found">Ничего не найдено!\nДобавьте заказ, чтобы увидеть его в списке</string>
    <string name="not_wasted">Не было зафиксировано расходов за прошлые месяцы!</string>
    <string name="create_form_main">Что будем печатать?</string>
    <string name="name">Опишите заказ</string>
    <string name="create_form_date">Нужно определить сроки!</string>
    <string name="start_date">Заказ принят</string>
    <string name="end_date">Дата завершения заказа</string>
    <string name="create_form_price">Рассчитайте стоимость!</string>
    <string name="amount">Кол-во</string>
    <string name="total">Итого</string>
    <string name="size">Объем</string>
    <string name="size_hint">Объем изделия, см3</string>
    <string name="resource">Материал для печати</string>
    <string name="create_form_customer">Как связаться с клиентом?</string>
    <string name="customer_info">Информация о заказчике</string>
    <string name="customer_name">Имя клиента</string>
    <string name="customer_phone">Телефон клиента</string>
    <string name="month_waste">Расходы за месяц</string>
    <string name="compare_wastes">Сравните с расходами за предыдущие месяцы</string>
    <string name="electricity_amount">Потрачено электроэнергии, кВт</string>
    <string name="resource_amount">Потрачено пластика, см3</string>
</resources>