<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_primary"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/createActivityHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/app_secondary"
            android:textColorHighlight="@color/navbar_text"
            android:textColorLink="@color/navbar_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/app_secondary"
            android:padding="5dp"
            android:text="@string/create_form_main"
            android:textAlignment="viewStart"
            android:textColor="@color/app_primary"
            android:textColorHighlight="@color/navbar_text"
            android:textColorLink="@color/navbar_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createActivityHeader" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/input_style"
            android:fadeScrollbars="true"
            android:gravity="start"
            android:hint="@string/name"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:textAlignment="viewStart"
            android:textColor="@color/navbar_text"
            android:textColorHighlight="@color/app_secondary"
            android:textColorHint="@color/hint"
            android:textColorLink="@color/app_secondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/app_secondary"
            android:padding="5dp"
            android:text="@string/create_form_date"
            android:textAlignment="viewStart"
            android:textColor="@color/app_primary"
            android:textColorHighlight="@color/navbar_text"
            android:textColorLink="@color/navbar_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameField" />

        <EditText
            android:id="@+id/endDateField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/input_style"
            android:hint="@string/end_date"
            android:inputType="text"
            android:padding="8dp"
            android:scrollbars="none"
            android:textAlignment="center"
            android:textColor="@color/navbar_text"
            android:textColorHighlight="@color/app_secondary"
            android:textColorHint="@color/hint"
            android:textColorLink="@color/app_secondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/app_secondary"
            android:padding="5dp"
            android:text="@string/create_form_price"
            android:textAlignment="viewStart"
            android:textColor="@color/app_primary"
            android:textColorHighlight="@color/navbar_text"
            android:textColorLink="@color/navbar_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endDateField" />

        <EditText
            android:id="@+id/amountField"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_style"
            android:hint="@string/amount"
            android:inputType="numberSigned"
            android:padding="8dp"
            android:scrollbars="none"
            android:textAlignment="center"
            android:textColor="@color/navbar_text"
            android:textColorHighlight="@color/app_secondary"
            android:textColorHint="@color/hint"
            android:textColorLink="@color/app_secondary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/sizeField"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_style"
            android:hint="@string/size_hint"
            android:inputType="number"
            android:padding="8dp"
            android:scrollbars="none"
            android:textAlignment="viewStart"
            android:textColor="@color/navbar_text"
            android:textColorHighlight="@color/app_secondary"
            android:textColorHint="@color/hint"
            android:textColorLink="@color/app_secondary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountField" />

        <Spinner
            android:id="@+id/resourcesList"
            android:layout_width="250dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_item_style_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:text="@string/resource"
            android:textAlignment="viewStart"
            android:textColor="@color/app_secondary"
            android:textColorHighlight="@color/navbar_text"
            android:textColorLink="@color/navbar_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sizeField" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/app_secondary"
            android:padding="5dp"
            android:text="@string/create_form_customer"
            android:textAlignment="viewStart"
            android:textColor="@color/app_primary"
            android:textColorHighlight="@color/navbar_text"
            android:textColorLink="@color/navbar_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resourcesList" />

        <TextView
            android:id="@+id/TextVIew9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:text="@string/total"
            android:textAlignment="center"
            android:textColor="@color/app_secondary"
            android:textColorHighlight="@color/navbar_text"
            android:textColorLink="@color/navbar_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/totalPriceField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/amountField"
            app:layout_constraintStart_toStartOf="@+id/totalPriceField"
            app:layout_constraintTop_toTopOf="@+id/amountField" />

        <TextView
            android:id="@+id/totalPriceField"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/spinner_item_style_light"
            android:gravity="center|end"
            android:textAlignment="center"
            android:textColor="@color/navbar_text"
            android:textColorHighlight="@color/app_secondary"
            android:textColorLink="@color/app_secondary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sizeField"
            app:layout_constraintTop_toBottomOf="@+id/amountField" />

        <EditText
            android:id="@+id/customerNameField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/input_style"
            android:hint="@string/customer_name"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:scrollbars="none"
            android:textAlignment="viewStart"
            android:textColor="@color/navbar_text"
            android:textColorHighlight="@color/app_secondary"
            android:textColorHint="@color/hint"
            android:textColorLink="@color/app_secondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/customerPhoneField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/input_style"
            android:hint="@string/customer_phone"
            android:inputType="phone"
            android:padding="8dp"
            android:scrollbars="none"
            android:textAlignment="viewStart"
            android:textColor="@color/navbar_text"
            android:textColorHighlight="@color/app_secondary"
            android:textColorHint="@color/hint"
            android:textColorLink="@color/app_secondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customerNameField" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addOrderButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="128dp"
            android:background="@drawable/button_style"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/app_primary"
            android:textColorHighlight="@color/navbar_text"
            android:textColorLink="@color/navbar_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customerPhoneField" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>