<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/transparent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/month_waste"
            android:textAlignment="center"
            android:textColor="@color/app_secondary"
            android:textColorHighlight="@color/navbar_text"
            android:textColorLink="@color/navbar_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/compareWastesText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/app_secondary"
            android:padding="5dp"
            android:text="@string/compare_wastes"
            android:textAlignment="center"
            android:textColor="@color/app_primary"
            android:textColorHighlight="@color/navbar_text"
            android:textColorLink="@color/navbar_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView12"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/electricityAmountText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style"
                    android:textAlignment="center"
                    android:textColor="@color/app_primary"
                    android:textColorHighlight="@color/navbar_text"
                    android:textColorLink="@color/navbar_text"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/electricity_amount"
                    android:textAlignment="center"
                    android:textColor="@color/app_secondary"
                    android:textColorHighlight="@color/navbar_text"
                    android:textColorLink="@color/navbar_text"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="20dp">

                <TextView
                    android:id="@+id/resourceAmountText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style"
                    android:textAlignment="center"
                    android:textColor="@color/app_primary"
                    android:textColorHighlight="@color/navbar_text"
                    android:textColorLink="@color/navbar_text"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/resource_amount"
                    android:textAlignment="center"
                    android:textColor="@color/app_secondary"
                    android:textColorHighlight="@color/navbar_text"
                    android:textColorLink="@color/navbar_text"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/wastesList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compareWastesText">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/notFoundWastesText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/not_wasted"
            android:textAlignment="center"
            android:textColor="@color/app_secondary"
            android:textColorHighlight="@color/navbar_text"
            android:textColorLink="@color/navbar_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/wastesList" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>